# telebot

./: .env.example  README.md  pyproject.toml
telebot/: __init__.py  bot.py  config.py  flood.py  rules.py  supabase.py  welcome.py
tests/: test_flood.py  test_rules.py  test_supabase_store.py  test_welcome.py
