[build-system]
requires = ["setuptools>=63", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telebot"
version = "0.1.0"
description = "Modular Telegram moderation bot powered by Telethon and Supabase"
authors = [
  {name = "Telebot Maintainers"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "telethon>=1.34.0,<2",
  "httpx>=0.27.0"
]

[project.optional-dependencies]
test = [
  "pytest>=8.1"
]

[tool.pytest.ini_options]
addopts = "-q"
